Fikse logo. Fikse litt mer på første eksempel.

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/capra-logo-web.png">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
   </head>
   <body>
-    <noscript>Ingen JavaScript - ingen slides. Velkommen til 2018, der altså.</noscript>
+    <noscript>Ingen JavaScript - Ingen slides. Velkommen til 2018, der altså.<noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
