Fiks noscript-tag

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
   </head>
   <body>
-    <noscript>Ingen JavaScript - Ingen slides. Velkommen til 2018, der altså.<noscript>
+    <noscript>Ingen JavaScript - Ingen slides. Velkommen til 2018, der altså.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
