Flere slides. Legg til eksempel om ducks pattern

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     -->
     <title>Redux for voksne</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700" rel="stylesheet">
   </head>
   <body>
     <noscript>Ingen JavaScript - Ingen slides. Velkommen til 2018, der altså.</noscript>
