--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Redux for voksne</title>
+    <title>Redux for adults</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700" rel="stylesheet">
   </head>
   <body>
-    <noscript>Ingen JavaScript - Ingen slides. Velkommen til 2018, der altså.</noscript>
+    <noscript>No JS - no slides, duh</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
